# microservices-demo

./: .gitignore  README.md
.github/workflows/: ci.yml
inventory-service/: pyproject.toml  test_main.http
inventory-service/app/: consumer.py  main.py  redis_client.py  schemas.py  streams.py
inventory-service/app/config/: settings.py
inventory-service/docs/: mkdocs.yml
inventory-service/docs/docs/: api.md  architecture.md  index.md
inventory-service/docs/site/: 404.html
inventory-service/tests/: conftest.py  test_main.py  test_schemas.py  test_streams.py
payment-service/: .env.example  .gitignore  pyproject.toml  test_main.http
payment-service/app/: consumer.py  main.py  redis_client.py  schemas.py  streams.py
payment-service/app/config/: settings.py
payment-service/docs/: mkdocs.yml
payment-service/docs/docs/: api.md  architecture.md  index.md
payment-service/docs/site/: 404.html
payment-service/tests/: test_main.py  test_schemas.py  test_streams.py
