[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "dg071018@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "redis (>=8.0.0,<9.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
