[project]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "dg071018@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "redis[asyncio] (>=8.0.0,<9.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.0"
mkdocs = "^1.6"
mkdocs-material = "^9.0"
ruff = "^0.9.0"
pytest-asyncio = "^0.25"
httpx2 = "*"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "UP", "W"]
ignore = ["D100", "D104", "D107", "D203", "D212", "D401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"docs/*" = ["D"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"